# test-delete

./: .gitignore  Dockerfile  Makefile  README.md  cloudbuild.yaml  pyproject.toml  setup.py  skaffold.yaml
.github/workflows/: secrets-shield.yml  tests.yml  vulnerability-scanner.yml
skaffold/: mp-boilerplate-api-catalog.yaml  mp-boilerplate-api-cs.yaml  mp-boilerplate-api-indexing.yaml  mp-boilerplate-api-team.yaml  mp-boilerplate-api.yaml  mp-boilerplate-configmap.yaml
src/appcatalog/: __init__.py  cli.py  views.py  web.py
src/appcs/: __init__.py  cli.py  views.py  web.py
src/appindexing/: web.py
src/appindexing/consumers/: __init__.py  __main__.py  nsku_product_update.py  price_update.py  reindex_zsku.py  stock_update.py  zsku_product_update.py
src/appindexing/cronjobs/: misc.py
src/apporder/: __init__.py  cli.py  urls.py  web.py
src/apporder/consumers/: payment.py
src/apporder/views/: __init__.py  order.py  serviceability.py  session.py
src/apporder/workers/: __init__.py  my8_migration.py  order.py  payment.py
src/appteam/: __init__.py  views.py  web.py
src/libaccess/: __init__.py  context.py
src/libcatalog/: __init__.py  context.py
src/libcontent/: __init__.py
src/libcs/: __init__.py
src/libexternal/: __init__.py  customer.py  invoicing.py  notification.py
src/libindexing/: __init__.py  context.py
src/liborder/: __init__.py  context.py
src/libutil/: __init__.py  async_utils.py  cloud_logging_handler.py  engines.py  error.py  pubsub.py  query_parser.py  solr_util.py  spanner_util.py  tracer.py  translation.py  util.py
tests/: conftest.py  load_fixtures.py
tests/access/: __init__.py  test_access.py
tests/catalog/: test_catalog.py  test_category.py
tests/content/: test_content.py
tests/cs/: test_cs.py  util.py
tests/data/: serviceability.toml
tests/indexing/: test_indexing.py
tests/order/: test_adjustment.py  test_checkout.py  test_notification.py  test_payment.py  test_sc_integrations.py  test_serviceability.py  test_session.py  test_translation.py  util.py
translations/: README.md  ar.po  babel.cfg  compile.sh  en.po  en.pot  extract.sh
(+94 files in other folders)
